added install script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "save solar panel performance logs to database.",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "start": "node index.js",
+    "install": "./install.sh"
   },
   "keywords": [
     "solar",
